--- a/HTML/bench-press.html
+++ b/HTML/bench-press.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/bench-press.css">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/modal.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
