--- a/HTML/cable-pec-fly.html
+++ b/HTML/cable-pec-fly.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/footer.css">
     <link rel="stylesheet" href="CSS/main-menu.css">
     <link rel="stylesheet" href="CSS/cable-pec-fly.css">
+    <link rel="stylesheet" href="CSS/modal.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
