--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -7,16 +7,18 @@
     <title>galler_gymlover</title>
     <link href="CSS/gallery.css" rel="stylesheet">
     <link rel="stylesheet" href="CSS/header.css">
-        <link rel="stylesheet" href="CSS/footer.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
-            rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/modal.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body data-page="gallery">
     <header class="header">
         <div class="header_part1 nav-link" data-href="project.php">
@@ -27,13 +29,18 @@
         <div class="header_part2">
             <div class="part2_a"></div>
             <div class="part2_b">
-                <div class="nav-link require-login" data-href="membership.html"><p class="header-tag">MEMBERSHIP</p></div>
-                <div class="nav-link" data-href="store.php"><p class="header-tag">STORE</p></div>
+                <div class="nav-link require-login" data-href="membership.html">
+                    <p class="header-tag">MEMBERSHIP</p>
+                </div>
+                <div class="nav-link" data-href="store.php">
+                    <p class="header-tag">STORE</p>
+                </div>
             </div>
             <div class="part2_c"></div>
         </div>
         <div class="header_part3">
-            <img src="images/login-icon-white.png" class="profile" id="profile-link" onclick="handleProfileClick()" alt="Profile Icon">
+            <img src="images/login-icon-white.png" class="profile" id="profile-link" onclick="handleProfileClick()"
+                alt="Profile Icon">
             <img class="store nav-link" src="images/store-icon-white.png" data-href="store.php" alt="store">
         </div>
     </header>
