--- a/HTML/bench-press.html
+++ b/HTML/bench-press.html
@@ -31,13 +31,18 @@
         <div class="header_part2">
             <div class="part2_a"></div>
             <div class="part2_b">
-                <div class="nav-link require-login" data-href="membership.html"><p class="header-tag">MEMBERSHIP</p></div>
-                <div class="nav-link" data-href="store.php"><p class="header-tag">STORE</p></div>
+                <div class="nav-link require-login" data-href="membership.html">
+                    <p class="header-tag">MEMBERSHIP</p>
+                </div>
+                <div class="nav-link" data-href="store.php">
+                    <p class="header-tag">STORE</p>
+                </div>
             </div>
             <div class="part2_c"></div>
         </div>
         <div class="header_part3">
-            <img src="images/login-icon-white.png" class="profile" id="profile-link" onclick="handleProfileClick()" alt="Profile Icon">
+            <img src="images/login-icon-white.png" class="profile" id="profile-link" onclick="handleProfileClick()"
+                alt="Profile Icon">
             <img class="store nav-link" src="images/store-icon-white.png" data-href="store.php" alt="store">
         </div>
     </header>
@@ -59,26 +64,28 @@
 
         <div class="left-section">
 
-            <h1 class="title">Bench Press</h1>
+            <h1 class="title">
+                <?= $exerciseDetail['Title'][0] ?? '' ?>
+            </h1>
             <div class="image-container">
-                <img src="images/bench-press-v1.jpg" alt="Bench Press">
-                <div class="overlay">
-                    <div class="done-container">
-                        <label for="done">Done</label>
-                        <input type="checkbox" id="done">
-                    </div>
-                </div>
+                <img src="<?= $exerciseDetail['Image'][0] ?? '' ?>" alt="" width="300">
             </div>
 
             <div class="bottom-box">
                 <div class="detail">
-                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Type:</u> Compound Exercise</p>
+                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Type:</u>
+                        <?= $exerciseDetail['Type'][0] ?? '' ?>
+                    </p>
                 </div>
                 <div class="detail">
-                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Movement:</u> Horizontal Push</p>
+                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Movement:</u>
+                        <?= $exerciseDetail['Movement'][0] ?? '' ?>
+                    </p>
                 </div>
                 <div class="detail">
-                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Equipment:</u> Barbell, Flat Bench</p>
+                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Equipment:</u>
+                        <?= $exerciseDetail['Equipment'][0] ?? '' ?>
+                    </p>
                 </div>
             </div>
 
@@ -87,25 +94,37 @@
         <div class="right-section">
             <div class="panel">
                 <h3>Target Muscle Group</h3>
-                <p><strong>Primary:</strong> Pectoralis Major (Mid Chest)</p>
-                <p><strong>Secondary:</strong> Triceps, Anterior Deltoids (Front Shoulders)</p>
+                <p><strong>Primary:</strong>
+                    <?= $exerciseDetail['Primary Target'][0] ?? '' ?>
+                </p>
+                <p><strong>Secondary:</strong>
+                    <?= $exerciseDetail['Secondary Target'][0] ?? '' ?>
+                </p>
             </div>
 
             <div class="panel">
                 <h3>Recommended Reps &amp; Sets</h3>
                 <ul>
-                    <li>For Muscle Growth: 3-4 sets of 8-12 reps</li>
-                    <li>For Strength: 4-6 sets of 3-6 reps</li>
-                    <li>For Endurance: 2-3 sets of 12-20 reps</li>
+                    <li>For Muscle Growth:
+                        <?= $exerciseDetail['Reps For Growth'][0] ?? '' ?>
+                    </li>
+                    <li>For Strength:
+                        <?= $exerciseDetail['Reps For Strength'][0] ?? '' ?>
+                    </li>
+                    <li>For
+                        <?= $exerciseDetail['Reps For Endurance'][0] ?? '' ?>
+                    </li>
                 </ul>
             </div>
 
             <div class="panel">
                 <h3>Key Benefits</h3>
                 <ul>
-                    <li>Builds upper body strength</li>
-                    <li>Enhances chest muscle size and definition</li>
-                    <li>Engages multiple muscle groups for efficient training</li>
+                    <?php foreach ($exerciseDetail['Benefit'] ?? [] as $b): ?>
+                    <li>
+                        <?= $b ?>
+                    </li>
+                    <?php endforeach; ?>
                 </ul>
             </div>
         </div>
@@ -143,7 +162,7 @@
             </div>
         </div>
     </footer>
-    
+
 
     <script src="JS/header.js"></script>
     <script src="JS/main-menu.js"></script>
